--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
     <img alt="Python" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/python/python-plain.svg" />
     <img alt="TypeScript" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/typescript/typescript-original.svg" />
     <h2>🦾 Current Project: Data scrapping using Puppeteer 💪</h2>
-    <img src="https://github.com/AbdoRahmani/MyWebsite/blob/main/Screenshot%202024-05-23%20154735.png" alt="Screenshot 2024-05-23 154735" >
+    <img alt="Screenshot 2024-05-23 154735.png" src="https://github.com/AbdoRahmani/MyWebsite/blob/main/Screenshot%202024-05-23%20154735.png?raw=true" alt="Screenshot 2024-05-23 154735" >
 </body>
 </html>
