--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
     <img alt="TypeScript" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/typescript/typescript-original.svg" />
     
     <h2>🦾 Samples of Data Cleaning Skills (Python) 💪</h2>
-    <img style="width: 100%; height: 100%;"  src="https://github.com/AbdoRahmani/MyWebsite/blob/main/MyWebsiteResources/data%20cleaner%201.png" alt="data cleaner 1" >
-    <img style="width: 100%; height: 100%;"  src="https://github.com/AbdoRahmani/MyWebsite/blob/main/MyWebsiteResources/data%20cleaner%202.png" alt="data cleaner 2" >
-    <img style="width: 100%; height: 100%;"  src="https://github.com/AbdoRahmani/MyWebsite/blob/main/MyWebsiteResources/data%20cleaning%20services.png" alt="data cleaning services" >
+    <img style="width: 100%; height: 100%;"  src="https://raw.githubusercontent.com/AbdoRahmani/MyWebsite/blob/main/MyWebsiteResources/data%20cleaner%201.png" alt="data cleaner 1" >
+    <img style="width: 100%; height: 100%;"  src="https://raw.githubusercontent.com/AbdoRahmani/MyWebsite/blob/main/MyWebsiteResources/data%20cleaner%202.png" alt="data cleaner 2" >
+    <img style="width: 100%; height: 100%;"  src="https://raw.githubusercontent.com/AbdoRahmani/MyWebsite/blob/main/MyWebsiteResources/data%20cleaning%20services.png" alt="data cleaning services" >
 
     <h2>🦾 Samples of Data Visualizations (PowerBI) 💪</h2>
-    <img style="width: 100%; height: 100%;"  src="https://github.com/AbdoRahmani/MyWebsite/blob/main/MyWebsiteResources/Pizza%20Sales%20Dashboard.png" alt="Pizza Sales Dashboard" >
-    <img style="width: 100%; height: 100%;"  src="https://github.com/AbdoRahmani/MyWebsite/blob/main/MyWebsiteResources/HR%20Dashboard.png" alt="HR Dashboard" >
+    <img style="width: 100%; height: 100%;"  src="https://raw.githubusercontent.com/AbdoRahmani/MyWebsite/blob/main/MyWebsiteResources/Pizza%20Sales%20Dashboard.png" alt="Pizza Sales Dashboard" >
+    <img style="width: 100%; height: 100%;"  src="https://raw.githubusercontent.com/AbdoRahmani/MyWebsite/blob/main/MyWebsiteResources/HR%20Dashboard.png" alt="HR Dashboard" >
     
     <h2>🦾 Current Project: Data scrapping using Puppeteer 💪</h2>
-    <img style="width: 100%; height: 100%;"  src="https://github.com/AbdoRahmani/MyWebsite/blob/main/MyWebsiteResources/DataScrapper.png" alt="DataScrapper" >
+    <img style="width: 100%; height: 100%;"  src="https://raw.githubusercontent.com/AbdoRahmani/MyWebsite/blob/main/MyWebsiteResources/DataScrapper.png" alt="DataScrapper" >
 </body>
 </html>
