--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             justify-content: center; /* Center horizontally */
             align-items: center; /* Center vertically */
             min-height: 100vh; /* Minimum height equal to viewport height */
-            background-color: #f0f0f0; /* Optional: Adds some background color */
+            background-color: #ccffff; /* Optional: Adds some background color */
         }
         .content-wrapper {
             width: 65%; /* Set width to 65% */
@@ -46,7 +46,7 @@
       <img alt="MySQL" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/mysql/mysql-plain-wordmark.svg" />
       <img alt="Node.js" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/nodejs/nodejs-original-wordmark.svg" />
       <img alt="Puppeteer" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/puppeteer/puppeteer-original.svg" />
-      <img alt="Python" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/python/python-plain.svg" />
+      <img alt="Python" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/python/python-original-wordmark.svg" />
       <img alt="TypeScript" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/typescript/typescript-original.svg" />
 
       <h2>🦾 Samples of Data Cleaning Skills (Python) 💪</h2>
