--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <div class="content-wrapper">
       <h1># 🧗‍♂️ AbdoRahmani</h1>
       <p>Data Engineer (Data Scrapping | Data Cleaning | Data Analysis)</p>
+      <p>Contacts ( +213775589335 | rahmaniiabdoo@gmail.com | linkedin.com/in/abdorahmani/ )</p>
       <p>I'm a Chemical Engineering graduate who decided to shift my career towards Big Data. I used to work with a lot of data in my previous line of work to make decisions and I realised how powerful programming languages can be in that field and with tons of toolsets to play with the possibilities are endless!</p>
 
       <h2>🧰 Languages and Tools</h2>
